--- a/ResturantManage/app/src/main/res/layout/activity_order_cart.xml
+++ b/ResturantManage/app/src/main/res/layout/activity_order_cart.xml
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <NumberPicker
-            android:id="@+id/tableNoPicker"
+            android:id="@+id/tipPercentage"
             android:layout_width="59dp"
             android:layout_height="53dp"
             android:layout_marginEnd="68dp"
