--- a/ResturantManage/app/src/main/res/layout/activity_table_detail.xml
+++ b/ResturantManage/app/src/main/res/layout/activity_table_detail.xml
@@ -177,7 +177,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="115dp"
-            android:text="TextView"
+            android:text="£0"
             android:textColor="@color/colorText"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
