--- a/ResturantManage/app/src/main/res/layout/activity_main.xml
+++ b/ResturantManage/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:cropToPadding="false"
         android:onClick="OrderClicked"
         android:scaleType="fitStart"
-        android:src="@drawable/cutlery"
+        app:srcCompat="@drawable/cutlery"
         android:textAlignment="textEnd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -38,7 +38,7 @@
         android:cropToPadding="false"
         android:onClick="MenuClicked"
         android:scaleType="centerInside"
-        android:src="@drawable/menu"
+        app:srcCompat="@drawable/menu"
         android:textAlignment="textEnd"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
