--- a/ResturantManage/app/src/main/res/layout/activity_menu_home.xml
+++ b/ResturantManage/app/src/main/res/layout/activity_menu_home.xml
@@ -8,8 +8,8 @@
 
     <ImageButton
         android:id="@+id/Drinks"
-        android:layout_width="97dp"
-        android:layout_height="112dp"
+        android:layout_width="118dp"
+        android:layout_height="141dp"
         android:layout_marginTop="5dp"
         android:background="#9567EC"
         android:contentDescription="@string/drinksdesc"
@@ -25,14 +25,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/drinks"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="@+id/Drinks"
         app:layout_constraintEnd_toEndOf="@+id/Drinks"
         app:layout_constraintStart_toStartOf="@+id/Drinks" />
 
     <ImageButton
         android:id="@+id/Starters"
-        android:layout_width="95dp"
-        android:layout_height="112dp"
+        android:layout_width="120dp"
+        android:layout_height="132dp"
         android:layout_marginTop="10dp"
         android:background="#9567EC"
         android:contentDescription="@string/todo"
@@ -48,14 +49,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Starters"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="@+id/Starters"
         app:layout_constraintEnd_toEndOf="@+id/Starters"
         app:layout_constraintStart_toStartOf="@+id/Starters" />
 
     <ImageButton
         android:id="@+id/imageButton4"
-        android:layout_width="96dp"
-        android:layout_height="115dp"
+        android:layout_width="122dp"
+        android:layout_height="142dp"
         android:layout_marginTop="10dp"
         android:background="#9567EC"
         android:onClick="MainsClicked"
@@ -70,14 +72,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mains"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
         app:layout_constraintEnd_toEndOf="@+id/imageButton4"
         app:layout_constraintStart_toStartOf="@+id/imageButton4" />
 
     <ImageButton
         android:id="@+id/imageButton9"
-        android:layout_width="99dp"
-        android:layout_height="120dp"
+        android:layout_width="119dp"
+        android:layout_height="161dp"
         android:layout_marginTop="10dp"
         android:background="#9567EC"
         android:onClick="DessertsClicked"
@@ -92,6 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Desserts"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton9"
         app:layout_constraintEnd_toEndOf="@+id/imageButton9"
         app:layout_constraintStart_toStartOf="@+id/imageButton9" />
