--- a/ResturantManage/app/src/main/res/layout/activity_main.xml
+++ b/ResturantManage/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
 
     <ImageButton
         android:id="@+id/btnOrder"
-        android:layout_width="124dp"
-        android:layout_height="151dp"
+        android:layout_width="161dp"
+        android:layout_height="182dp"
         android:layout_alignWithParentIfMissing="false"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="15dp"
@@ -20,16 +20,16 @@
         android:cropToPadding="false"
         android:onClick="OrderClicked"
         android:scaleType="fitStart"
-        app:srcCompat="@drawable/cutlery"
         android:textAlignment="textEnd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cutlery" />
 
     <ImageButton
         android:id="@+id/btnMenu"
-        android:layout_width="137dp"
-        android:layout_height="156dp"
+        android:layout_width="162dp"
+        android:layout_height="189dp"
         android:layout_alignWithParentIfMissing="false"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
@@ -38,16 +38,16 @@
         android:cropToPadding="false"
         android:onClick="MenuClicked"
         android:scaleType="centerInside"
-        app:srcCompat="@drawable/menu"
         android:textAlignment="textEnd"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/menu" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="137dp"
-        android:layout_height="134dp"
+        android:layout_width="165dp"
+        android:layout_height="163dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="16dp"
         android:background="#9567EC"
@@ -62,6 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/order"
+        android:textColor="@color/colorText"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/btnOrder"
         app:layout_constraintEnd_toEndOf="@+id/btnOrder"
         app:layout_constraintStart_toStartOf="@+id/btnOrder" />
@@ -71,14 +73,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/table_view"
+        android:textColor="@color/colorText"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton"
         app:layout_constraintEnd_toEndOf="@+id/imageButton"
         app:layout_constraintStart_toStartOf="@+id/imageButton" />
 
     <ImageButton
         android:id="@+id/imageButton2"
-        android:layout_width="120dp"
-        android:layout_height="133dp"
+        android:layout_width="155dp"
+        android:layout_height="163dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="15dp"
         android:background="#9567EC"
@@ -93,14 +97,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bill"
+        android:textColor="@color/colorText"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
         app:layout_constraintEnd_toEndOf="@+id/imageButton2"
         app:layout_constraintStart_toStartOf="@+id/imageButton2" />
 
     <ImageButton
         android:id="@+id/imageButton3"
-        android:layout_width="131dp"
-        android:layout_height="146dp"
+        android:layout_width="160dp"
+        android:layout_height="186dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="16dp"
         android:background="#9567EC"
@@ -115,14 +121,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/track"
+        android:textColor="@color/colorText"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
         app:layout_constraintEnd_toEndOf="@+id/imageButton3"
         app:layout_constraintStart_toStartOf="@+id/imageButton3" />
 
     <ImageButton
         android:id="@+id/imageButton5"
-        android:layout_width="119dp"
-        android:layout_height="138dp"
+        android:layout_width="154dp"
+        android:layout_height="183dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="15dp"
         android:background="@color/cardview_light_background"
@@ -137,8 +145,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Allergy Info"
+        android:textColor="@color/colorText"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
         app:layout_constraintEnd_toEndOf="@+id/imageButton5"
         app:layout_constraintStart_toStartOf="@+id/imageButton5" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="394dp"
+        android:layout_height="49dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
