--- a/ResturantManage/app/src/main/res/values/colors.xml
+++ b/ResturantManage/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#7C4DFF</color>
     <color name="colorPrimaryDark">#3F1DCB</color>
-    <color name="colorAccent">#b47cff</color>
+    <color name="colorAccent">#C59EF9</color>
     <color name="black">#000000</color>>
 </resources>
