--- a/ResturantManage/app/src/main/res/layout/activity_main.xml
+++ b/ResturantManage/app/src/main/res/layout/activity_main.xml
@@ -145,7 +145,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Allergy Info"
-        android:textColor="@color/colorText"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
         app:layout_constraintEnd_toEndOf="@+id/imageButton5"
